Editor/manual_test/log.txt
--- ARGS, KWARGS --- (for error.as_log_and_popup decorated function)
("\n    WITH cte AS (\n        select col0_1, col00_2 FROM tab0\n        JOIN tab00 USING (tab0_id))\n    SELECT /* hegr */\n        'hejsa',\n        $$ multi\n        line $$,\n        123, true and false,\n        cte.col00_2,  \n        col10_2,\n        (SELECT count(col20_2) FROM tab20)\n    --FROM tree\n    --join cte ON tree.col_1 = cte.col0_1\n    FROM cte\n    join tab ON tab.col_1 = cte.col0_1\n    JOIN tab1 USING (tab_id)\n    JOIN tab10 USING (tab1_id)\n;\n\n    alter table xx\n;",) {} 

Traceback (most recent call last):
  File "c:\Mine\Python\Sapi\Editor\server\tools\error.py", line 22, in new_func
    return old_func(*args, **kwargs)
  File "c:\Mine\Python\Sapi\Editor\server\features\executor.py", line 81, in _execute
    return tr.execute_plain_sql(sql_query).rows()
  File "C:\Mine\Python\Sapi\Parser\src\sapi\_internals\execution.py", line 99, in execute_plain_sql
    _._cursor.execute(sql_query, *args, **kwargs)
  File "c:\Mine\Python\Sapi\Editor\local_editor_env\lib\site-packages\psycopg\cursor.py", line 97, in execute
    raise ex.with_traceback(None)
psycopg.errors.SyntaxError: syntax error at or near ";"
LINE 22: ;
         ^

